
The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [5.8.2] - 2023-10-07

### Added

- A premiação do `/bicho` agora possui impostos. Quanto maior seu prêmio, maior o imposto. O máximo de impostos é **36.3%**, quando o lucro é maior de **150000** estrelinhas.

### Changed

- O comando `/top` apenas mostra o nome dos usuários nas primeiras 3 páginas.
- O valor máximo para apostar na `/roleta` foi aumentado para **50000**.
- A aposta mínima da roleta foi aumentada para **10** estrelinhas.
- O imposto do `/roleta` foi alterado. Agora, apostas até **10** estrelinhas possuem apenas **3.8%** de impostos. O imposto vai aumentar de forma linear até **50000** estrelinhas de lucro, quando o imposto cobrado será de **29.7%**.
- O limite mínimo para apostar no `/bicho` foi aumentado para **10 estrelinhas**.
- O limit máximo para apostar no `/bicho` foi reduzido para **250000** estrelinhas.

### Fixed

- Os impostos da `/roleta` não mostravam o valor em porcentagem.

### Removed

- O limite de apostas altas por hora foi removido do comando `/roleta`.

## [5.8.1] - 2023-10-01

### Fixed

- A tradução das mãos trinca e quadra do poker foram corrigidas.
- Corrigido o bug onde sair de uma partida no lobby de fim de jogo não te removia do estado de estar em uma partida.

## [5.8.0] - 2023-09-30

### Added

- **POKER**!!!! Agora é possível jogar _Poker_ na Menhera! Use `/poker` e aposte com seus amigos.

## [5.7.3] - 2023-09-23

### Changed

- O comando `/macetava` não mostra mais o discriminator dos usuários.

## [5.7.2] - 2023-08-05

### Fixed

- Resolvido o problema onde a Menhera crashava enquanto reiniciava.

## [5.7.1] - 2023-07-31

### Fixed

- O comando `/perfil` mostrava o seu nome como sendo de seu cônjuge.
- A punição de inatividade não era citada nas transações.

## [5.7.0] - 2023-07-30

### Added
