@@ -13,6 +13,8 @@ import { generateBlackjackEmbed, getTableImage, safeImageReply } from './blackja
 import { BlackjackCard, BlackjackFinishGameReason } from './types';
 import ComponentInteractionContext from '../../structures/command/ComponentInteractionContext';
 import { ApiTransactionReason } from '../../types/api';
+import { getProfitTaxes, getTaxedProfit } from '../../utils/taxesUtils';
+import { BLACKJACK_TAXES } from '.';
 
 const finishMatch = async (
   ctx: ChatInputInteractionContext | ComponentInteractionContext,
@@ -32,7 +34,12 @@ const finishMatch = async (
 ): Promise<void> => {
   const winner = didUserWin ? ctx.interaction.user.username : bot.username;
   const loser = !didUserWin ? ctx.interaction.user.username : bot.username;
-  const prize = didUserWin ? Math.floor(bet * prizeMultiplier) : bet;
+
+  const taxedPrize = didUserWin
+    ? getTaxedProfit(Math.floor(bet * prizeMultiplier), BLACKJACK_TAXES)
+    : bet;
+
+  const prize = finishReason === 'draw' ? bet : taxedPrize;
 
   if (didUserWin) {
     await starsRepository.addStars(ctx.interaction.user.id, prize);
@@ -72,6 +79,13 @@ const finishMatch = async (
     value: ctx.locale(`commands:blackjack.${finishReason}`, {
       winner,
       loser,
+      taxed: didUserWin
+        ? ctx.locale('commands:blackjack.taxed-win', {
+            tax: (getProfitTaxes(Math.floor(bet * prizeMultiplier), BLACKJACK_TAXES) * 100).toFixed(
+              2,
+            ),
+          })
+        : '',
       prize: didUserWin ? prize : negate(prize),
       text: ctx.locale(`commands:blackjack.${didUserWin ? 'profit' : 'loss'}`),
     }),
